website/src/index.css
@import 'tailwindcss';

@font-face {
  font-family: 'Dancing Script';
  font-style: normal;
  font-weight: 400 700;
  font-display: swap;
  src: url('https://static.figma.com/font/DancingScript_wght__1') format('woff2');
}

@font-face {
  font-family: 'Jost';
  font-style: normal;
  font-weight: 100 900;
  font-display: swap;
  src: url('https://static.figma.com/font/Jost_wght__1') format('woff2');
}

@theme {
  --font-sans: 'Jost', sans-serif;
  --font-display: 'Dancing Script', cursive;
  --color-white: #FAF7F2;
}

html, body {
  background-color: #FAF7F2;
}

